# pylliterate

./: .gitignore  404.html  LICENSE  Readme.md  cspell.json  index.html  makefile  mkdocs.yml  pylliterate.yml  pyproject.toml  sitemap.xml
pylliterate/: __init__.py  __main__.py  cli.py  config.py  core.py
pylliterate/__init__/: index.html
pylliterate/__main__/: index.html
pylliterate/cli/: index.html
pylliterate/config/: index.html
pylliterate/core/: index.html
search/: search_index.json
